# bank-crawler

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOY.md  Dockerfile  NOTIFICATION_TEST.md  README.md  check_config.py  crawler.py  crontab.example  deploy.sh  docker-compose.yml  health_check.py  pyproject.toml  requirements.txt  run.sh  scheduler.py  test_docker.py  test_notification.py
.github/workflows/: main.yml
data/: jobs_history.json
page_examples/: README.md  job_detail.html  job_lists.html
page_examples/job_detail_files/: ad_js(1).php  ad_js(2).php  ad_js.php  foot.js  jquery-1.7.1.min.js  myfun-9102.htm  saved_resource  script2.js  yhzptc.css
page_examples/job_lists_files/: ad_js(1).php  css.css  jquery_ht.js  myfun-9092.htm
